final alterations